[package]
name = "forcerelay-ckb-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["forcerelay-ckb-sdk-server"]

[dependencies]
anyhow = "1.0.72"
async-stream = "0.3.5"
bytes = "1.4.0"
ckb-fixed-hash = "0.111.0-rc8"
ckb-hash = "0.111.0-rc8"
ckb-ics-axon = { git = "https://github.com/synapseweb3/ckb-ics.git", version = "0.1.0" }
ckb-jsonrpc-types = "0.111.0-rc8"
ckb-sdk = { git = "https://github.com/nervosnetwork/ckb-sdk-rust.git", rev = "refs/pull/80/merge" }
ckb-types = "0.111.0-rc8"
faster-hex = "0.8.0"
futures = "0.3.28"
jsonrpc-utils = { version = "0.2.0", features = ["macros", "client"] }
rlp = "0.5.2"
serde = { version = "1.0.183", features = ["derive"] }
serde_with = "3.2.0"
tokio = { version = "1.31.0", features = ["time"] }

[dev-dependencies]
serde_json = "1.0.104"
